--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>移动城堡</title><meta name="author" content="卡西法"><meta name="copyright" content="卡西法"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta property="og:type" content="website">
+<meta name="google-adsense-account" content="ca-pub-3680600266359535">
 <meta property="og:title" content="移动城堡">
 <meta property="og:url" content="https://kaxifakl.github.io/index.html">
 <meta property="og:site_name" content="移动城堡">
